[project]
name = "termqt"
version = "1.0.0"
authors = [
  { name="Terry Geng", email="terry@terriex.com" },
]
description = "A terminal emulator widget implemented in Python/Qt."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "qtpy",
    "pywinpty >= 2.0.1; platform_system=='Windows'"
]
classifiers = [
    "Environment :: X11 Applications :: Qt",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage ="https://github.com/TerryGeng/termqt"
Issues = "https://github.com/TerryGeng/termqt/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["termqt"]
namespaces = false
